--- a/CH4/specials.html
+++ b/CH4/specials.html
@@ -23,6 +23,7 @@
           A delightful end to your meal with layers of coffee-soaked
           ladyfingers.
         </h3>
+        <img src="tiramisu.webp" alt="Tiramisu Dessert">
     </div>
     <div class="specialItems">
         <h2>Lasagna</h2>
